--- a/EventBridge/S3BucketConfigChangeMonitor.yml
+++ b/EventBridge/S3BucketConfigChangeMonitor.yml
@@ -25,6 +25,7 @@ Resources:
           configurationItem:
             resourceType:
               - AWS::S3::Bucket
+          configurationItemDiff:
             changeType:
               - UPDATE
       Targets:
